--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 
 <head>
     <meta charset="utf-8">
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <title>San Diego Top Spots</title>
 </head>
 
 <body>
-    <!-- Write your markup here -->
+    <h1>San Diego Top Spots</h1>
 
-    <!-- Don't forget to add your <script> tag here -->
+
+    <table id="output">
+        <tr>
+          <th>Activity</th>
+          <th>Description</th>
+          <th>Longitude</th>
+          <th>Latitude</th>
+        </tr>
+    </table>
+
+<p id="test"></p>
+        <script src="main.js"></script>
 </body>
 </html>
