added link to google maps

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
     <table id="output">
         <tr>
-          <th>Activity</th>
-          <th>Description</th>
-          <th>Longitude</th>
-          <th>Latitude</th>
+            <th>ID#</th>
+            <th>Activity</th>
+            <th>Description</th>
+            <th>Location</th>
+            <th>Link</th>
         </tr>
     </table>
 
