--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <title>San Diego Top Spots</title>
@@ -12,25 +13,17 @@
 
 <body>
         <div class="container">
-            <h1>San Diego Top Spots</h1>
+            <h1 id="header">San Diego Top Spots</h1>
         
             <div>
                 <iframe width="600" height="250" id="gmap" src="https://maps.google.com/maps?q=33.09745,-116.99572&t=&z=12&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
             </div>
         </div>
 
-   
-
-   <div class="table">
-        <table id="output">
-            <tr>
-                <th></th>
-                <th>Activity</th>
-                <th>Description</th>
-                <th></th>
-            </tr>
-        </table>
-    </div>
+        <div class="table">
+            <table id="output">
+            </table>
+        </div>
 
     <script src="main.js"></script>
 </body>
